tests/core/positive/functions/basic_return.vais
F main() -> i64 {
    R 42
}
