tests/core/negative/parse/missing_brace.vais
F main() -> i64 {
    R 0
